Adds interference calc

--- a/tools/fits/index.html
+++ b/tools/fits/index.html
@@ -326,5 +326,8 @@ document.addEventListener('DOMContentLoaded', () => {
     calculateFit();
 });
 </script>
+
+References
+- https://amesweb.info/press-fit/interference-fit-calculator.aspx
 </body>
 </html>
