improves composite wall tool and templates

--- a/tools/example_tool/index.html
+++ b/tools/example_tool/index.html
@@ -314,11 +314,28 @@
             document.querySelector('#param3 + .tooltip-trigger')
                 ?.setAttribute('data-tooltip', toolDocumentation.parameters.param3 || 'N/A');
             
+            const latexLines = toolDocumentation.latex
+                ? toolDocumentation.latex.split('\n').filter(line => line.trim().length > 0)
+                : [];
+            const equationCards = latexLines.map((expression, index) => `
+                <div class="equation-card">
+                    <strong>Equation (${index + 1})</strong>
+                    <span class="equation-expression">\\[ ${expression} \\]</span>
+                    <p style="font-size:0.85rem;color:var(--text-light);margin-bottom:0.35rem;">Variables:</p>
+                    <ul id="equation-vars-${index}">
+                        <li><span class="math-inline">\\(k\\)</span>: Thermal conductivity (W/m·K)</li>
+                        <li><span class="math-inline">\\(L\\)</span>: Thickness (m)</li>
+                        <li><span class="math-inline">\\(A\\)</span>: Area (m²)</li>
+                    </ul>
+                </div>
+            `).join('');
             document.getElementById('background').innerHTML = `
                 <h3>Underlying Principles</h3>
                 <p>${toolDocumentation.description.replace(/\n/g, '<br>')}</p>
                 <h4>Equations</h4>
-                <p>$$${toolDocumentation.latex.replace(/\n/g, '$$<br>$$')}$$</p>
+                <div class="equation-container">
+                    ${equationCards || '<p>No equations provided.</p>'}
+                </div>
             `;
             typesetMath();
         }
@@ -385,3 +402,38 @@
     </script>
 </body>
 </html>
+        .equation-container {
+            display: flex;
+            flex-direction: column;
+            gap: 12px;
+            margin-top: 0.75rem;
+        }
+        .equation-card {
+            background: rgba(248, 250, 252, 0.75);
+            border: 1px solid var(--border-color);
+            border-radius: 8px;
+            padding: 12px 16px;
+        }
+        .equation-card strong {
+            display: block;
+            margin-bottom: 6px;
+            color: var(--secondary-color);
+        }
+        .equation-card .equation-expression {
+            display: block;
+            margin-bottom: 8px;
+        }
+        .equation-card ul {
+            list-style: none;
+            padding-left: 0;
+            margin: 0;
+            display: grid;
+            gap: 6px 18px;
+            grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
+            font-size: 0.85rem;
+            color: var(--text-light);
+        }
+        .equation-card .math-inline {
+            font-weight: 600;
+            color: var(--secondary-color);
+        }
