--- a/tools/example_tool_tabbed/index.html
+++ b/tools/example_tool_tabbed/index.html
@@ -122,6 +122,43 @@
         .steps-content { padding: 0 12px 12px 12px; border-top: 1px solid var(--border-color); }
         .steps-content p { margin-bottom: 0.25rem; font-size: 0.9rem; color: var(--text-color); }
 
+        .equation-container {
+            display: flex;
+            flex-direction: column;
+            gap: 14px;
+            margin-top: 0.85rem;
+        }
+        .equation-card {
+            background: rgba(248, 250, 252, 0.75);
+            border: 1px solid rgba(203, 213, 225, 0.7);
+            border-radius: 10px;
+            padding: 12px 16px;
+        }
+        .equation-card strong {
+            display: block;
+            margin-bottom: 6px;
+            color: var(--secondary-color);
+            font-size: 1rem;
+        }
+        .equation-card .equation-expression {
+            display: block;
+            margin-bottom: 8px;
+        }
+        .equation-card ul {
+            list-style: none;
+            padding-left: 0;
+            margin: 0;
+            display: grid;
+            gap: 6px 18px;
+            grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
+            font-size: 0.85rem;
+            color: var(--text-light);
+        }
+        .equation-card .math-inline {
+            font-weight: 600;
+            color: var(--secondary-color);
+        }
+
         /* --- 7d. Interactive Definitions (Tooltips) --- */
         .def { position: relative; cursor: help; border-bottom: 2px dotted var(--border-color); }
         .def::after { content: attr(data-def); position: absolute; bottom: 125%; left: 50%; transform: translateX(-50%); background-color: var(--text-color); color: white; padding: 8px 12px; border-radius: 6px; font-size: 13px; font-weight: 400; line-height: 1.4; white-space: nowrap; opacity: 0; visibility: hidden; transition: opacity 0.2s, visibility 0.2s; z-index: 10; }
@@ -340,11 +377,29 @@
             document.querySelector('#param3 + .tooltip-trigger')
                 ?.setAttribute('data-tooltip', toolDocumentation.parameters.param3 || 'N/A');
             
+            const latexLines = toolDocumentation.latex
+                ? toolDocumentation.latex.split('\n').filter(line => line.trim().length > 0)
+                : [];
+            const equationCards = latexLines.map((expression, index) => `
+                <div class="equation-card">
+                    <strong>Equation (${index + 1})</strong>
+                    <span class="equation-expression">\\[ ${expression} \\]</span>
+                    <p style="font-size:0.85rem;color:var(--text-light);margin-bottom:0.35rem;">Variables:</p>
+                    <ul>
+                        <li><span class="math-inline">\\(k\\)</span>: Thermal conductivity (W/m·K)</li>
+                        <li><span class="math-inline">\\(L\\)</span>: Thickness (m)</li>
+                        <li><span class="math-inline">\\(A\\)</span>: Area (m²)</li>
+                    </ul>
+                </div>
+            `).join('');
+
             document.getElementById('background').innerHTML = `
                 <h3>Underlying Principles</h3>
                 <p>${toolDocumentation.description.replace(/\n/g, '<br>')}</p>
                 <h4>Equations</h4>
-                <p>$$${toolDocumentation.latex.replace(/\n/g, '$$<br>$$')}$$</p>
+                <div class="equation-container">
+                    ${equationCards || '<p>No equations provided.</p>'}
+                </div>
             `;
             typesetMath();
         }
