Updates to catalog

--- a/index.html
+++ b/index.html
@@ -242,7 +242,7 @@
 
       async function loadTools() {
         try {
-          const response = await fetch("./_catalog.json");
+          const response = await fetch("./catalog.json");
           if (!response.ok) throw new Error("Failed to load catalog");
           tools = await response.json();
           renderCategoryFilter(tools);
