fixes hotspot and adds gemini.md file

--- a/tools/motor-hotspot/index.html
+++ b/tools/motor-hotspot/index.html
@@ -332,6 +332,7 @@
             document.getElementById(tabName).style.display = 'block';
             event.currentTarget.classList.add('active');
         }
+        window.openTab = openTab;
 
         async function loadReadme() {
             try {
@@ -484,7 +485,7 @@ function markdownToHtml(markdown) {
                     || 'Start near 0.3 when the probe sits in heavy iron near a concentrated strand; increase toward 0.8–1.0 for distributed sensors.';
             }
 
-            const equationsHtml = `
+            const equationsHtml = String.raw`
                 <div class="equation-card">
                     <strong>1. Energy balances after switch-off</strong>
                     <span class="equation-expression">\[ C_h \frac{\mathrm{d}T_h}{\mathrm{d}t} = -\frac{T_h - T_s}{R_{hs}},\quad C_s \frac{\mathrm{d}T_s}{\mathrm{d}t} = \frac{T_h - T_s}{R_{hs}} - \frac{T_s - T_\infty}{R_{sa}} \]</span>
@@ -523,7 +524,7 @@ function markdownToHtml(markdown) {
                 </div>
                 <div class="equation-card">
                     <strong>7. Fallback indicator</strong>
-                    <p>If the data only capture the soak-out rise, the solver reports \(`model_mode = 'first_order_fallback'`\) and uses the single-mode equivalent while keeping the same energy balance.</p>
+                    <p>If the data only capture the soak-out rise, the solver reports <code>model_mode = 'first_order_fallback'</code> and uses the single-mode equivalent while keeping the same energy balance.</p>
                 </div>
             `;
             const notesRaw = toolDocumentation.notes
@@ -562,7 +563,7 @@ function markdownToHtml(markdown) {
                 <p>When the captured data only show the soak-out rise and lack curvature, the calculator switches to a first-order approximation and flags the change in the results summary.</p>
             `;
 
-            const derivationHtml = `
+            const derivationHtml = String.raw`
                 <h4>Step-by-Step Derivation</h4>
                 <ol class="derivation-steps">
                     <li><strong>Energy balances.</strong> Once the motor is de-energised, heat stored in the winding redistributes between the hidden hot spot and the instrumented sensor mass.\[ C_h \frac{\mathrm{d}T_h}{\mathrm{d}t} = -\frac{T_h - T_s}{R_{hs}},\qquad C_s \frac{\mathrm{d}T_s}{\mathrm{d}t} = \frac{T_h - T_s}{R_{hs}} - \frac{T_s - T_\infty}{R_{sa}} \]</li>
@@ -703,7 +704,7 @@ function markdownToHtml(markdown) {
                 `;
             }
 
-            const fallbackNote = result.model_mode === 'first_order_fallback'
+            const fallbackNote = result['model_mode'] === 'first_order_fallback'
                 ? '<p class="result-subtext" style="margin-top:12px;">Only the soak-out heating portion was available; used first-order approximation for the fast internal mode.</p>'
                 : '';
             resultsDiv.innerHTML = cardsHtml + tableHtml + sensitivityHtml + fallbackNote;
